sprint3_perform_models_services_and_controllers_of_the_api_added_tests_swagger_and_Jacoco_for_test_coverage